--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.1",
+    "react-colorful": "^4.4.4",
     "react-cookie": "3.0.4",
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.2",
