Added the outlets and activated the chairs tab

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,11 @@ graphql:
 # if you want to @ExceptionHandler annotation for custom GraphQLErrors
     exception-handlers-enabled: true
     contextSetting: PER_REQUEST_WITH_INSTRUMENTATION
+
 spring:
   profiles:
     active: @spring.profiles.active@
   security:
+
+hue:
+  ip: 192.168.1.77
