--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,7 @@ spring:
   security:
 
 hue:
-  apikeymidrock: ${hue.apikeymidrock:"DMN24zKLkv4uClyfk3smBMB1VyB8BeVpxq1YOndO"}
-  apikey: ${hue.apikey:wXe25yPzGmlLKQTIvA7Ug-is1XU443e1JT7jzuT9}
-  ip: ${hue.ip:192.168.1.206}
+  apikey:
+  ip:
 
 
