--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,6 @@ spring:
   security:
 
 hue:
-  apikeymidrock: "DMN24zKLkv4uClyfk3smBMB1VyB8BeVpxq1YOndO"
-  ip: "192.168.1.206"
-  api-key: "wXe25yPzGmlLKQTIvA7Ug-is1XU443e1JT7jzuT9" 
+  ip:
+  api-key:
   
